2006-01-30  Lillian Angel  <langel@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java:
	Added new fields.
	(insert): Initialized fields. Removed call to addEdit, 
	and created ElementEdit instead.
	(insertUpdate): Added check for fracturing. If the
	fracturing was not successful, we should push the
	last element back on the stack.
	(insertParagraph): Fixed call to getEditForParagraphAndIndex.
	Also, changed replace calls to use Edit.
	(insertFirstContentTag): Removed unneeded check and fixed call
	to recreateLeaves.
	(insertContent): Fixed check to use new fields. Added code in
	to check if leaves overlap.
	(createFracture): Fixed call to recreateLeaves.
	(recreateLeaves): Fixed code and cleaned it up a bit.
	(insertFracture): Set fracNotCreated field.
	(addEdit): Removed, this method is not needed.

2006-01-30  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JRootPane.java
	(RootLayout.prefSize): Removed caching for preferredSize.
	(RootLayout.invalidateLayout): Likewise.
	(RootLayout.preferredLayoutSize): Likewise.	

2006-01-30  Roman Kennke  <kennke@aicas.com>

	PR classpath/26035
	* javax/swing/JFrame.java
	(frameInit): Handle the defaultLookAndFeelDecorated flag.
	* javax/swing/plaf/metal/MetalRootPaneUI.java
	(MetalFrameBorder): New inner class, provides the border for
	top level containers with L&F decorations.
	(MetalTitlePane): New inner class, provides the title pane for
	top level containers with L&F decorations.
	(MetalRootLayout): New inner class. Used to layout the root pane
	when L&F window decorations are enabled.
	(installUI): New method. Handles window decorations.
	(uninstallUI): New method. Handles window decorations.
	(propertyChange): Handles window decorations.
	(installWindowDecorations): New method. Handles window
	decorations.
	(uninstallWindowDecorations): New method. Handles window
	decorations.
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(getSupportsWindowDecorations): Overridden to return true.
